--- a/jamovi/brawsim.a.yaml
+++ b/jamovi/brawsim.a.yaml
@@ -2453,7 +2453,7 @@ options:
 
 
     - name: meta4SampleSize
-      title: 'Sample size' 
+      title: 'sample size' 
       type: Number
       default: 42
 
