--- a/jamovi/brawsim.u.yaml
+++ b/jamovi/brawsim.u.yaml
@@ -2419,13 +2419,13 @@ children:
                   - type: Label
                     label: >-
                       For more information and an explanation, click on the
-                      ⓘlink.
+                      '<span style="color:#0000ff;">ⓘlink.</span>'
                   - type: LayoutBox
                     style: inline
                     children:
                       - type: CollapseBox
                         collapsed: true
-                        label: '<span style="color:red;">Instructions</span>'
+                        label: '<span style="color:#1276b9;">Instructions</span>'
                         margin: none
                         minWidth: 250
                         maxWidth: 250
@@ -2555,8 +2555,9 @@ children:
                                 minWidth: 15
                               - type: Label
                                 label: >-
-                                  To get more information, press the ⓘlink above
-                                  the graphs
+                                  To get more information, press the
+                                  '<span style="color:#0000ff;">ⓘlink</span>'
+                                  above the graphs
                           - type: LayoutBox
                             style: inline
                             children:
@@ -3028,8 +3029,6 @@ children:
                               - type: Label
                                 label: ' '
                                 minWidth: 15
-                              - type: ComboBox
-                                name: meta4SigOriginal
                               - type: TextBox
                                 name: meta4RepPower
                                 format: number
@@ -3041,7 +3040,7 @@ children:
                                 minWidth: 30
                               - type: CollapseBox
                                 collapsed: true
-                                label: a. does replication help?
+                                label: a. why do replication?
                                 margin: none
                                 minWidth: 380
                                 children:
@@ -3052,7 +3051,7 @@ children:
                                         style: inline
                                         children:
                                           - type: Label
-                                            label: Press here for a sample and replication
+                                            label: Press here for a significant original sample
                                             cell:
                                               row: 0
                                               column: 1
@@ -3085,7 +3084,7 @@ children:
                                 minWidth: 30
                               - type: CollapseBox
                                 collapsed: true
-                                label: b. meta-analysis?
+                                label: b. does replication help?
                                 margin: none
                                 minWidth: 380
                                 children:
@@ -3098,8 +3097,7 @@ children:
                                         children:
                                           - type: Label
                                             label: >-
-                                              Press here for meta-analysis of two new
-                                              samples
+                                              Press here for an original and a replication sample
                                             cell:
                                               row: 0
                                               column: 1
